[package]
name = "monisens_mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.132"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rumqttc = "0.21.0"
regex = "1"

[lib]
crate-type = ["cdylib"]
